--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>🌤 Weather App</h1>
+    <h1>🌦️ Weather Dashboard</h1>
+
     <div class="search-box">
       <input type="text" id="cityInput" placeholder="Enter city name" />
       <button id="getWeatherBtn">Search</button>
@@ -24,7 +25,10 @@
 
     <div id="loader" class="loader hidden"></div>
 
-    <div id="weatherResult" class="weather-card hidden"></div>
+    <div id="currentWeather" class="weather-card hidden"></div>
+
+    <h2 id="forecastTitle" class="hidden">5-Day Forecast</h2>
+    <div id="forecast" class="forecast-container hidden"></div>
   </div>
 
   <script src="script.js"></script>
