--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>🌦️ Weather Dashboard</h1>
 
     <div class="search-box">
-      <input type="text" id="cityInput" placeholder="Enter city name" />
+      <input type="text" id="cityInput" placeholder="Enter city, state code (e.g., Mumbai, MH)">
       <button id="getWeatherBtn">Search</button>
     </div>
 
